--- a/.github/workflows/validate-dags.yml
+++ b/.github/workflows/validate-dags.yml
@@ -22,6 +22,7 @@ jobs:
         run: |
           pip install "apache-airflow==3.1.7" \
             --constraint "https: //raw.githubusercontent.com/apache/airflow/constraints-3.1.7/constraints-3.11.txt"
+          pip install "structlog ==25.5.0" --force-reinstall
 
 
       - name: Validate DAGs
