--- a/.github/workflows/validate-dags.yml
+++ b/.github/workflows/validate-dags.yml
@@ -18,14 +18,25 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install Airflow
+      - name: Install dependencies
         run: |
-          pip install "apache-airflow==3.1.7" \
-            --constraint "https: //raw.githubusercontent.com/apache/airflow/constraints-3.1.7/constraints-3.11.txt"
-          pip install "structlog ==25.5.0" --force-reinstall
+          pip install apache-airflow==3.1.7
+          pip install structlog==25.5.0 --force-reinstall
 
-
-      - name: Validate DAGs
+      - name: Validate DAG syntax
         run: |
           echo "Validating DAG syntax..."
-          airflow dags list || exit 1
+          for f in dags/*.py; do
+            echo "Checking $f..."
+            python -c "
+import ast, sys
+with open('$f') as file:
+    source = file.read()
+try:
+    ast.parse(source)
+    print('$f - OK')
+except SyntaxError as e:
+    print('$f - FAILED:', e)
+    sys.exit(1)
+"
+          done
