Update DAG validation to use inline Python script
Replaced the call to validate_dags.py with inline Python code to validate DAG syntax directly in the workflow.

--- a/.github/workflows/validate-dags.yml
+++ b/.github/workflows/validate-dags.yml
@@ -19,4 +19,21 @@ jobs:
           python-version: "3.11"
 
       - name: Validate DAG syntax
-        run: python .github/scripts/validate_dags.py
+        run: |
+          python -c "
+import ast, sys, os
+failed = False
+for f in os.listdir('dags'):
+    if f.endswith('.py'):
+        path = 'dags/' + f
+        with open(path) as file:
+            source = file.read()
+        try:
+            ast.parse(source)
+            print(path + ' - OK')
+        except SyntaxError as e:
+            print(path + ' - FAILED: ' + str(e))
+            failed = True
+if failed:
+    sys.exit(1)
+"
