--- a/.github/workflows/validate-dags.yml
+++ b/.github/workflows/validate-dags.yml
@@ -4,26 +4,63 @@ on:
   push:
     branches: [ main ]
     paths:
-      - 'dags/**'
+      - "dags/**"
+      - "requirements.txt"
+
+  pull_request:
+    branches: [ main ]
 
 jobs:
   validate:
     runs-on: ubuntu-latest
+
+    env:
+      AIRFLOW_HOME: ~/airflow
+
     steps:
+      # 1️⃣ Checkout repository
       - name: Checkout Repository
         uses: actions/checkout@v4
 
+      # 2️⃣ Setup Python
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Install dependencies
-        run: |
-          pip install --upgrade pip
-          pip install apache-airflow==2.8.0 structlog==23.3.0
+      # 3️⃣ Upgrade pip
+      - name: Upgrade pip
+        run: python -m pip install --upgrade pip
 
-      - name: Validate DAG syntax
+      # 4️⃣ Install Apache Airflow (Airflow 3 compatible)
+      - name: Install Airflow
         run: |
-          echo "Validating DAG syntax..."
-          airflow dags list || exit 1
+          pip install "apache-airflow==3.1.7" \
+          --constraint "https://raw.githubusercontent.com/apache/airflow/constraints-3.1.7/constraints-3.11.txt"
+
+      # 5️⃣ Install DAG dependencies
+      - name: Install requirements
+        run: |
+          if [ -f requirements.txt ]; then
+            pip install -r requirements.txt
+          fi
+
+      # 6️⃣ Initialize Airflow database
+      - name: Initialize Airflow DB
+        run: airflow db init
+
+      # 7️⃣ Copy DAGs into Airflow folder
+      - name: Load DAGs
+        run: |
+          mkdir -p $AIRFLOW_HOME/dags
+          cp -r dags/* $AIRFLOW_HOME/dags/
+
+      # 8️⃣ Validate DAG parsing
+      - name: Validate DAGs
+        run: |
+          echo "Listing DAGs..."
+          airflow dags list
+
+      # 9️⃣ Check import errors (VERY IMPORTANT)
+      - name: Check DAG import errors
+        run: airflow dags list-import-errors
