--- a/.github/workflows/validate-dags.yml
+++ b/.github/workflows/validate-dags.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      # 2️⃣ Setup Python
+      # 2️⃣ Set up Python
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
@@ -32,35 +32,35 @@ jobs:
       - name: Upgrade pip
         run: python -m pip install --upgrade pip
 
-      # 4️⃣ Install Apache Airflow (Airflow 3 compatible)
-      - name: Install Airflow
+      # 4️⃣ Install Airflow 3 with constraints
+      - name: Install Apache Airflow
         run: |
           pip install "apache-airflow==3.1.7" \
-          --constraint "https://raw.githubusercontent.com/apache/airflow/constraints-3.1.7/constraints-3.11.txt"
+            --constraint "https://raw.githubusercontent.com/apache/airflow/constraints-3.1.7/constraints-3.11.txt"
 
-      # 5️⃣ Install DAG dependencies
-      - name: Install requirements
+      # 5️⃣ Install DAG dependencies (including structlog fix)
+      - name: Install DAG dependencies
         run: |
           if [ -f requirements.txt ]; then
             pip install -r requirements.txt
           fi
 
-      # 6️⃣ Initialize Airflow database
+      # 6️⃣ Initialize Airflow metadata DB
       - name: Initialize Airflow DB
         run: airflow db init
 
-      # 7️⃣ Copy DAGs into Airflow folder
+      # 7️⃣ Copy DAGs into AIRFLOW_HOME
       - name: Load DAGs
         run: |
           mkdir -p $AIRFLOW_HOME/dags
           cp -r dags/* $AIRFLOW_HOME/dags/
 
-      # 8️⃣ Validate DAG parsing
-      - name: Validate DAGs
+      # 8️⃣ Validate DAGs
+      - name: List DAGs
         run: |
           echo "Listing DAGs..."
           airflow dags list
 
-      # 9️⃣ Check import errors (VERY IMPORTANT)
-      - name: Check DAG import errors
+      # 9️⃣ Check for import errors
+      - name: List DAG import errors
         run: airflow dags list-import-errors
