--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
+# Pin structlog to avoid Airflow logging issues
+structlog==23.1.0
+
 # Data processing
 pandas==2.2.2
 
 # MySQL database connector
 mysql-connector-python==8.4.0
 
-# Airflow SQL provider
+# Airflow SQL provider (for SQLExecuteQueryOperator)
 apache-airflow-providers-common-sql==1.14.0
