--- a/.github/workflows/validate-dags.yml
+++ b/.github/workflows/validate-dags.yml
@@ -1,68 +1,44 @@
-name: Airflow CI/CD
+name: Validate Airflow DAGs
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
+    paths:
+      - 'dags/**'
+  pull_request:
+    branches: [ main ]
     paths:
       - 'dags/**'
 
 jobs:
-  airflow:
+  validate-dags:
     runs-on: ubuntu-latest
-    env:
-      AIRFLOW_HOME: ${{ github.workspace }}/airflow
-      AIRFLOW__CORE__LOAD_EXAMPLES: "False"
-      # Default SQLite connection (override for MySQL/Postgres)
-      AIRFLOW__CORE__SQL_ALCHEMY_CONN: sqlite:///${{ github.workspace }}/airflow/airflow.db
-      DB_TYPE: sqlite  # Options: sqlite, mysql, postgres
-      DB_HOST: localhost
-      DB_PORT: 3306
-      DB_USER: airflow
-      DB_PASSWORD: airflow
-      DB_NAME: airflow_db
 
     steps:
-      - name: Checkout code
+      # 1. Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
+      # 2. Set up Python
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
-      - name: Install Airflow
+      # 3. Install Airflow
+      - name: Install Apache Airflow
         run: |
           python -m pip install --upgrade pip
-          pip install "apache-airflow==3.5.3"  # Lock to stable version
-          # Install DB drivers if using MySQL or Postgres
-          if [ "$DB_TYPE" = "mysql" ]; then pip install mysql-connector-python; fi
-          if [ "$DB_TYPE" = "postgres" ]; then pip install psycopg2-binary; fi
+          pip install "apache-airflow==2.7.2" --constraint "https://raw.githubusercontent.com/apache/airflow/constraints-2.7.2/constraints-3.11.txt"
 
-      - name: Wait for Database
-        if: env.DB_TYPE != 'sqlite'
+      # 4. Initialize Airflow DB (SQLite, so DB agnostic for validation)
+      - name: Initialize Airflow Database
         run: |
-          echo "Waiting for database $DB_TYPE at $DB_HOST:$DB_PORT..."
-          for i in {1..30}; do
-            if [ "$DB_TYPE" = "mysql" ]; then
-              mysqladmin ping -h $DB_HOST -P $DB_PORT -u $DB_USER -p$DB_PASSWORD &>/dev/null && break
-            elif [ "$DB_TYPE" = "postgres" ]; then
-              pg_isready -h $DB_HOST -p $DB_PORT -U $DB_USER &>/dev/null && break
-            fi
-            echo "Database not ready yet, retrying..."
-            sleep 2
-          done
+          export AIRFLOW_HOME=$(pwd)/airflow_home
+          airflow db init
 
-      - name: Initialize / Migrate Airflow DB
+      # 5. Validate DAGs
+      - name: Check DAG Syntax
         run: |
-          airflow db migrate
-          airflow connections create-default-connections
-
-      - name: List DAGs
-        run: airflow dags list
-
-      - name: Start Airflow Scheduler (background)
-        run: nohup airflow scheduler &
-
-      - name: Start Airflow Webserver (background)
-        run: nohup airflow webserver -p 8080 &
+          export AIRFLOW_HOME=$(pwd)/airflow_home
+          airflow dags list
